# omf-python

./: .bumpversion.cfg  .codespellignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pypirc.enc  .rstcheck.cfg  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.27  LICENSE  Makefile  README.rst  code_of_conduct.md  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: issue_to_jira.yml  pr_add_jira_summary.yml  publish.yml  pytest-unix-os.yml  pytest-windows.yml  run-tests.yml  static-analysis.yml
assets/v2/: test_file.omf
docs/: Makefile  conf.py  index.rst  make.bat  test_docs.py
docs/content/: api.rst  arrays.rst  attributes.rst  base.rst  blockmodel.rst  composite.rst  data.rst  examples.rst  io.rst  lineset.rst  pointset.rst  projects.rst  surface.rst  textures.rst  volume.rst
examples/: octree_subblocked_model.py  regular_block_model.py  regular_subblocked_model.py
notebooks/: cbi.py  cbi_plot.py  cbs.py  cbs_plot.py  cbs_storage_regular.ipynb  omf_cbi.ipynb  omf_cbs.ipynb  z_order_utils.py
omf/: __init__.py  attribute.py  base.py  blockmodel.py  composite.py  data.py  fileio.py  lineset.py  pointset.py  serializers.py  surface.py  texture.py  volume.py
omf/blockmodel/: __init__.py  _properties.py  _subblock_check.py  blockmodel.py  definition.py  freeform_subblocks.py  index.py  model.py  models.py  regular.py  regular_subblocks.py  subblock_check.py  subblock_definition.py  subblocked.py  subblocks.py  tensor.py
omf/compat/: __init__.py  interface.py  omf_v1.py
omf/fileio/: __init__.py  fileio.py  geoh5.py
tests/: convert_curve_test.py  convert_grid2d_test.py  convert_pointset_test.py  convert_project_test.py  convert_surface_test.py  convert_volume_test.py  doc_example_test.py  test_assets.py  test_attributes.py  test_base.py  test_blockmodel.py  test_composite.py  test_data.py  test_doc_example.py  test_docs.py  test_lineset.py  test_pointset.py  test_serializers.py  test_subblockedmodel.py  test_subblocks.py  test_surface.py  test_testdata.py  test_textures.py  test_volume.py
