[tool.poetry]
name = "omf"
version = "3.0.0-alpha"
description = "API Library for Open Mining Format"
authors = ["Global Mining Standards and Guidelines Group <it@seequent.com>"]
repository = "http://github.com/GMSGDataExchange/omf"
homepage = "http://www.globalminingstandards.org/"
readme = "README.rst"
keywords = ["geology", "geophysics", "earth sciences"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Natural Language :: English',
]

[tool.poetry.dependencies]
python = "^3.7.2,<3.11"

## pip dependencies
geoh5py = {version = "0.4.0"}
numpy = {version = "^1.7"}
properties = {version = "0.4.0"}
pypng = {version = "^0.20220715"}
six = {version = "^1.16"}
vectormath = {version = "^0.2.0"}
setuptools = {version = "63.4.1"}


[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.conda-lock]
platforms = ['win-64', 'osx-64', 'linux-64']
channels = ['conda-forge', 'defaults']

[tool.conda-lock.dependencies]
libblas = "*=*mkl"

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
# auto-updated by seed-isort-config

known_third_party = ["docutils", "geoh5py", "numpy", "properties", "six", "sphinx"]

[tool.black]
# defaults are just fine

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
