[tool.poetry]
name = "omf"
version = "3.0.0-alpha"
description = "API Library for Open Mining Format"
authors = [
    "Mira Geoscience <dominiquef@mirageoscience.com>",
    "Global Mining Standards and Guidelines Group <it@seequent.com>",
]
repository = "https://github.com/MiraGeoscience/omf"
homepage = "http://www.globalminingstandards.org/"
readme = "README.rst"
keywords = ["geology", "geophysics", "earth sciences"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Natural Language :: English',
]

[tool.poetry.dependencies]
python = "^3.7.2,<3.11"
geoh5py = "~0.4.0"
numpy = "^1.7"
properties = "~0.4.0"
pypng = "^0.20220715"
six = "^1.16"
vectormath = "~0.2.0"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
pytest-cov = "*"
sphinx = "^5.3"

[tool.isort]
# settings for compatibility between ``isort`` and ``black`` formatting
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
# auto-updated by seed-isort-config

known_third_party = ["docutils", "geoh5py", "numpy", "properties", "pytest", "six", "sphinx"]

[tool.black]
# defaults are just fine

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
